# cellxgene-ontology-guide

./: .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  pyproject.toml  release-please-config.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-docs.yml  conventional-commit-pr-title.yml  generate_all_ontology.yml  generate_curated_lists.yml  generate_decendant_mapping.yml  generate_descendant_mapping.yml  generate_diff_ontology.yml  generate_diffed_ontology.yml  lint-pr.yml  push-tests.yml  release.yml  tag-latest-ontology-assets.yml  validate_curated_lists.yml  validate_json_schemas.yml
api/python/: CHANGELOG.md  MANIFEST.in  Makefile  README.md  ontology-assets-version.txt  pypi_README.md  pyproject.toml
api/python/cellxgene-ontology/: pyproject.toml
api/python/demo/: Python API.ipynb
api/python/docs/: Makefile
api/python/docs/source/: api.rst  conf.py  index.rst
api/python/docs/source/apidoc/: cellxgene_ontology_guide.rst
api/python/notebooks/: Python API.ipynb  README.md
api/python/src/: ontology_mapper.py  tissue_mapper.py
api/python/src/cellxgene_ontology_guide/: __init__.py  _constants.py  artifact_download.py  constants.py  curated_ontology_term_lists.py  entities.py  env.py  ontology_parser.py  query.py  supported_versions.py
api/python/src/cellxgene_ontology_guide/artifacts/: ontology_info.yml
api/python/src/cellxgene_ontology_guide/data/: cell_type_descendants.json
api/python/tests/: conftest.py  test_artifact_download.py  test_curated_ontology_term_lists.py  test_entities.py  test_integration_ontology_data.py  test_ontology_parser.py  test_query.py  test_supported_versions.py  test_version.py
api/python/tests/notebooks/: test_python_api.py
artifact-schemas/: all_ontology_schema.json  cell_class_list_schema.json  cell_subclass_list_schema.json  cell_type_descendants_schema.json  ontology_info_schema.json  ontology_term_id_schema.json  organ_list_schema.json  system_list_schema.json  tissue_descendants_schema.json  tissue_general_list_schema.json
asset-schemas/: all_ontology_schema.json  cell_subclass_list_schema.json  latest_ontology_info_schema.json  ontology_info_schema.json  ontology_term_id_schema.json  organ_list_schema.json  system_list_schema.json  uberon_development_stage_list_schema.json
demo/: Python API.ipynb
docs/source/: api.rst  cellxgene_ontology_guide.data.rst  cellxgene_ontology_guide.rst  conf.py  index.rst
ontology-assets/: CHANGELOG.md  CHEBI-ontology-2026-01-06.json.zst  CL-ontology-v2025-02-13.json.zst  CL-ontology-v2025-04-10.json.zst  CL-ontology-v2025-07-30.json.zst  CL-ontology-v2026-03-26.json.zst  CVCL-ontology-53.0.json.zst  CVCL-ontology-55.0.json.zst  EFO-ontology-v3.75.0.json.zst  EFO-ontology-v3.78.0.json.zst  EFO-ontology-v3.82.0.json.zst  EFO-ontology-v3.88.0.json.zst  EFO-ontology-v3.90.0.json.zst  FBbt-ontology-v2025-02-13.json.zst  FBbt-ontology-v2025-03-27.json.zst  FBbt-ontology-v2025-08-07.json.zst  FBbt-ontology-v2026-04-03.json.zst  FBdv-ontology-v2026-04-02.json.zst  HANCESTRO-ontology-3.0.json.zst  HANCESTRO-ontology-v2025-04-01.json.zst  HANCESTRO-ontology-v2025-10-14.json.zst  HsapDv-ontology-v2025-01-23.json.zst  MONDO-ontology-v2025-02-04.json.zst  MONDO-ontology-v2025-05-06.json.zst  MONDO-ontology-v2025-09-02.json.zst  MONDO-ontology-v2026-04-07.json.zst  MONDO-ontology-v2026-05-05.json.zst  MmusDv-ontology-v2025-01-23.json.zst  PATO-ontology-v2025-02-01.json.zst  PATO-ontology-v2025-05-14.json.zst  UBERON-ontology-v2025-01-15.json.zst  UBERON-ontology-v2025-05-28.json.zst  UBERON-ontology-v2025-08-15.json.zst  UBERON-ontology-v2026-04-01.json.zst  UniProt-ontology-2025-10-08.json.zst  WBbt-ontology-v2025-01-02.json.zst  WBbt-ontology-v2025-03-26.json.zst  WBbt-ontology-v2025-08-18.json.zst  WBbt-ontology-vWS276.json.zst  WBls-ontology-vWS298.json.zst  (+12 more)
tools/: coverage.mk
tools/ontology-builder/: CHANGELOG.md  Makefile  README.md  all_ontology_generator.py  docker-versions.env  env.py  requirements.txt
tools/ontology-builder/ontology-references/: owl_info.yml
tools/ontology-builder/src/: all_ontology_generator.py  compute_descendent_mappings.py  curated_lists.py  env.py  (+5 more)
(+9 files in other folders)
