[build-system]
requires = ["setuptools>=69", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "cellxgene_ontology_guide"
dynamic = ["version"]
description = "Access ontology data used by CZ cellxgene"
authors = [
    { name = "Chan Zuckerberg Initiative Foundation", email = "cellxgene@chanzuckerberg.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = "~= 3.11"
dependencies = [
    "owlready2"
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["cellxgene_ontology_guide"]

[tool.pytest.ini_options]
pythonpath = ["src/cellxgene_ontology_guide"]

[tool.setuptools_scm]
version_file = "src/cellxgene_ontology_guide/_version.py"
version_scheme = "python-simplified-semver"
root = "../.."
relative_to = "__file__"
#TODO: setup the github tag for the pypi releases so setuptools-SCM can identify it using a python regex
#tag_regex="^python-api-(?P<version>[vV]?\d+(?:\.\d+){0,2}[^\+]*)(?:\+.*)?$')"
