[build-system]
requires = ["setuptools>=69", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "cellxgene_ontology_guide"
dynamic = ["version"]
description = "Access ontology data used by CZ cellxgene"
authors = [
    { name = "Chan Zuckerberg Initiative Foundation", email = "cellxgene@chanzuckerberg.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = "~= 3.10"
dependencies = ["semantic_version==2.10.0"]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.json.gz"]

[tool.setuptools_scm]
version_file = "src/cellxgene_ontology_guide/_version.py"
version_scheme = "python-simplified-semver"
root = "../.."  # relative to the location of the pyproject.toml file
tag_regex = "^python-api-(?P<version>[vV]?\\d+(?:\\.\\d+){0,2}[^\\+]*)(?:\\+.*)?$"

[tool.pytest.ini_options]
pythonpath = ["src/cellxgene_ontology_guide"]

