[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cellxgene_ontology_guide"
version = "1.2.0"
description = "Access ontology metadata used by CZ cellxgene"
authors = [
    { name = "Chan Zuckerberg Initiative Foundation", email = "cellxgene@chanzuckerberg.com" }
]
license = { file = "LICENSE" }
readme = "pypi_README.md"
requires-python = "~= 3.10"
dependencies = ["semantic_version>=2.10.0,<3"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[project.urls]
Documentation = "https://chanzuckerberg.github.io/cellxgene-ontology-guide/cellxgene_ontology_guide.html"
Repository = "https://github.com/chanzuckerberg/cellxgene-ontology-guide.git"
Issues = "https://github.com/chanzuckerberg/cellxgene-ontology-guide/issues"
Changelog = "https://github.com/chanzuckerberg/cellxgene-ontology-guide/blob/main/api/python/CHANGELOG.md"

[project.optional-dependencies]
test = ["pytest", "coverage", "nbconvert", "jupyter"]
docs = ["pdoc"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.json.gz"]

[tool.pytest.ini_options]
pythonpath = ["src/cellxgene_ontology_guide"]
addopts = "--doctest-modules"
doctest_optionflags = ["NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL", "ELLIPSIS"]
testpaths = [
    "tests",
    "src/cellxgene_ontology_guide"
]

