[build-system]
requires = ["setuptools>=69", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "cellxgene-ontology"
dynamic = ["version"]
description = "Access ontology data used by CZ cellxgene"
authors = [
    { name = "Chan Zuckerberg Initiative Foundation", email = "cellxgene@chanzuckerberg.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = "~= 3.11"
